--- a/src/components/PositionLabel/PositionLabel.css
+++ b/src/components/PositionLabel/PositionLabel.css
@@ -1,14 +1,14 @@
 @import '../variables.css';
 
-.NameLabel {
+.PositionLabel {
     margin: 0;
     position: absolute;
-    top: 10%;
-    left: 25%;
+    top: 20%;
+    left: 15%;
     margin-right: -50%;
     transform: translate(-50%, -50%);
     color: black;
     font:inherit;
     font-family: sans-serif;
-    font-size:400%;
+    font-size:200%;
 }
