--- a/andrewsite/andrew/templates/andrew/index.html
+++ b/andrewsite/andrew/templates/andrew/index.html
@@ -11,7 +11,7 @@
                             <div class="text-container">
                                 <h1 id="small">Hi,</h1>
                                 <h1 id="small">I'm</h1>
-                                <h1>ROBERT KIM.</h1>
+                                <h1>ANDREW DEMOLEAS.</h1>
                                 <p><span id="typed"></span></p>
                                 <p id="blog">Check out my <a href="/blog" target="_blank">blog</a>!</p>
                             </div>
